# splice3d

./: .coderabbit.yaml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SOFTWARE_DESIGN_DOCUMENT.md  codecov.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements-render.txt  setup.py  sonar-project.properties
cli/: __init__.py  analyze_gcode.py  api_server.py  gui.py  simulator.py  splice3d_cli.py
docs/: BOM.md  CALIBRATION.md  ENCODER_WHEEL.md  ESP32_WIFI.md  F1.1_MECHANICAL_DESIGN.md  F1.1_TOLERANCE_ANALYSIS.md  F1.2_ELECTRONICS_DESIGN.md  F1.3_BOM.md  F1.4_PRINTED_PARTS.md  F2.1_MOTOR_CONTROL.md  F2.2_ENCODER_SYSTEM.md  F2.3_TEMPERATURE_CONTROL.md  F2.4_CUTTING_SYSTEM.md  F3.2_SPLICE_EXECUTION.md  F3.3_POSITION_TRACKING.md  F3.4_ERROR_RECOVERY.md  F4.1_TELEMETRY_STREAM.md  FAQ.md  FEATURE_ROADMAP.md  INTEGRATION_OPTIONS.md  MATERIAL_COMPATIBILITY.md  MECHANICAL.md  ORCASLICER_SETUP.md  PRINTABLE_PARTS.md  PROJECT_ORGANIZATION.md  RESEARCH_PROMPT.md  ROADMAP.md  SAFETY_CHECKLIST.md  SPLICE_CORE.md  STARRY_NIGHT_ANALYSIS.md  TROUBLESHOOTING.md  UPGRADE_PLAN.md  VIDEO_TUTORIAL_OUTLINE.md  VISION.md  WIRING.md
firmware/: platformio.ini
postprocessor/: __init__.py  batch_processor_validation.py  bom_validation.py  cross_material_validation.py  custom_profile_validation.py  cutting_system_validation.py  device_connection_validation.py  electronics_validation.py  encoder_system_validation.py  error_recovery_validation.py  filament_feed_validation.py  filament_profiles.py  gcode_modifier.py  gcode_parser.py  gcode_preview_validation.py  job_queue_validation.py  material_database_validation.py  mechanical_validation.py  mfg_ready_validation.py  motor_control_validation.py  multi_color_validation.py  notification_manager_validation.py  ota_updater_validation.py  recipe_generator.py  (+24 more)
(+269 files in other folders)
